# DazToUnreal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DazStudioPlugin/: CMakeLists.txt  DzUnrealAction.cpp  DzUnrealAction.h  DzUnrealBridge.aps  DzUnrealBridge.def  DzUnrealBridge.rc  DzUnrealDialog.cpp  DzUnrealDialog.h  MLDeformer.cpp  MLDeformer.h  README.md  pluginmain.cpp  resource.h  version.h
DazStudioPlugin/Resources/: resources-mac.qrc  resources-win.qrc
Scripts/: DazToUnreal_RunOnce.dsa
Test/: Localize-JobPool.dsa  QA Manual Test Cases.md
Test/Results/: TestCase_Results.json  TestCase_Results.txt  TestResults_DzUnrealAction.json  TestResults_DzUnrealAction.txt  TestResults_DzUnrealDialog.json  TestResults_DzUnrealDialog.txt  temp_log.txt
Test/UnitTests/: CMakeLists.txt  RunUnitTests.dsa  UnitTest_DzUnrealAction.cpp  UnitTest_DzUnrealAction.h  UnitTest_DzUnrealDialog.cpp  UnitTest_DzUnrealDialog.h
Test/testcases/: QA_Utility_Functions.dsa  TC01.dsa  TC02.dsa  TC03.dsa  TC04.dsa  TC05.dsa  TC06.dsa  TC07.dsa  TC08.dsa  TC09.dsa  TC10.dsa  TC11.dsa  TC12.dsa  TC13.dsa  TC14.dsa  TC15.dsa  TC16.dsa  TC17.dsa  TC18.dsa  TC19b.dsa  TC20.dsa  _TC1001.dsa  test_runner--single.dsa  test_runner.dsa
UnrealPlugin/: README.md
UnrealPlugin/DazToUnreal/: DazToUnreal.uplugin
UnrealPlugin/DazToUnreal/Content/: AoASubsurfaceBaseMaterial.uasset  AoASubsurfaceParameters.uasset  AoASubsurfaceSkinMaterial.uasset  BaseAlphaMaterial.uasset  BaseHairMaterial.uasset  BaseMaskedMaterial.uasset  BaseMaterial.uasset  BaseMaterialTessellated.uasset  BasePBRSkinMaterial.uasset  BaseSSSSkinMaterial.uasset  BaseScalpMaterial.uasset  BaseSkinMaterial.uasset  BoneMapping.uasset  DSDBaseMaterial.uasset  DazParameters.uasset  Genesis3BaseSkeleton.uasset  Genesis3JCMPostProcess.uasset  Genesis3ToHumanoidPose.uasset  Genesis8BaseSkeleton.uasset  Genesis8FootIKCtrlRig.uasset  Genesis8JCMPostProcess.uasset  Genesis8SimpleCtrlRig.uasset  Genesis8ToHumanoidPose.uasset  IrayUberBaseMaterial.uasset  (+8 more)
(+68 files in other folders)
